15-exercise/manifests/deployment-java.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-web-app
  labels:
    app: java-web-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: java-web-app
  template:
    metadata:
      labels:
        app: java-web-app
    spec:
      containers:
        - name: java-container
          image: "syseleven/java-test-app:0.6.0"
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /status
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /status
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
