15-exercise/manifests/service-java.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-web-app-service
spec:
  selector:
    app: java-web-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
